--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2101,5 +2101,8 @@
             </intent-filter>
         </provider>
 
+   <!-- Heads up notifications -->
+        <activity android:name=".headsup.HeadsUpSettings" />
+
     </application>
 </manifest>
