--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1769,6 +1769,12 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
+       <!-- SAOSP start -->
+       <activity
+             android:name=".simpleaosp.AdditionalSettings" />
+
+       <!-- SAOSP end -->
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
                 android:label="@string/crypt_keeper_encrypt_title">
