Fixes for EF-Aosp Settings and MotoDoze Settings Addiction
Change-Id: I0a0a63328c27d038f878df6d28a368875b46520d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1771,7 +1771,7 @@
 
        <!-- LF-AOSP start -->
        <activity
-	     android:name=".simpleaosp.AdvancedOptions" />
+	     android:name=".simpleaosp.AdditionalSettings" />
 
        <!-- LF-AOSP end -->
 
